Mon Jun 27 01:34:18 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/etc/test_etc.rb (TestEtc#test_get{pw,gr}nam): skip entries
	  start with + sign, which means NIS.  these are returned in the
	  case that passwd and group entries in /etc/nsswitch.conf are set
	  to use "nis" explicitly on Debian.  fixed #3683

Mon Jun 27 00:44:53 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (rb_parser_end_seen_p): fix documentation about return
	  value. patched by Sho Hashimoto. [Bug #4511]

Mon Jun 27 00:40:47 2011  NARUSE, Yui  <naruse@ruby-lang.org>

	* hash.c (rb_hash_reject): add documentation that Hash#reject
	  without block returns enumerator.
	  patched by Michael Edgar [Bug #4847] [ruby-core:36800]

Sun Jun 26 23:49:21 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* test/date/test_switch_hitter.rb: added a test.

 Sun Jun 26 22:21:23 2011  Tadayoshi Funaba  <tadf@dotrb.org>

	* ext/date/date_core.c: refactoring.

Sun Jun 26 18:03:30 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* parse.y: comma at the end of line is no longer allowed.
	  A patch from Yukihiro Matsumoto  <matz AT ruby-lang.org>.
	  (fixed #3456).

Sun Jun 26 13:35:35 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_dump.c (rb_vm_bugreport): change CrashReporter suggestion messages
	  on Mac. It should be placed after "-- C level backtrace" line.
	  Suggested by Endoh-san.

	  <before>
	  -- See Crash Report log file under ~/Library/Logs/CrashReporter or ---------
	  -- /Library/Logs/CrashReporter, for the more detail of ---------------------
	  -- C level backtrace information -------------------------------------------

	<after>
	  -- C level backtrace information -------------------------------------------

	     See Crash Report log file under ~/Library/Logs/CrashReporter or
	     /Library/Logs/CrashReporter, for the more detail of.

Sun Jun 26 10:08:28 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/extconf.rb